// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component should render 1`] = `
<DocumentFragment>
  <label
    class="radio-container radio"
  >
    <input
      name="test"
      type="radio"
      value=""
    />
    <span
      class="check"
    />
    <span
      class="control-label"
    >
      Test 
      <a>
        Give me
      </a>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Radio component should use inline styles 1`] = `
<DocumentFragment>
  <label
    class="radio-container radio"
    style="height: 250px;"
  >
    <input
      name="test"
      type="radio"
      value=""
    />
    <span
      class="check"
    />
    <span
      class="control-label"
    >
      Default
    </span>
  </label>
</DocumentFragment>
`;
